# byte-slice-cast

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: byte-slice-cast.yml
src/: lib.rs
